fix shift+Space,code Prism

--- a/src/src/editor/themes/base.less
+++ b/src/src/editor/themes/base.less
@@ -273,7 +273,7 @@ body,
       background-color: @theme-color-light;
       font-style: italic;
       font-size: @font-size-normal;
-      border-radius: 2px; 
+      border-radius: 3px; 
       &-info{
         border-left: 4px solid @theme-color-primary;
       }
